ansible/service-app-aspnetcore.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetcore
  namespace: practica-two
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: aspnetcore
  type: NodePort
