ansible/app-ghost.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-rules-inngress
  namespace: practica-two
spec:
  rules:
  - host: www.ghost.com
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 2368
  - host: www.aspnetcore.com
    http:
      paths:
      - backend:
          serviceName: aspnetcore
          servicePort: 80
